[Features] Starting to use the api bundle, add entities with relations

--- a/src/.env
+++ b/src/.env
@@ -28,3 +28,7 @@ APP_SECRET=2664fd4c8e6c7f26a21621423c743cb9
 DATABASE_URL=mysql://root:root@t_db:3306/exercice
 #?serverVersion=8
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
