--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -1,5 +1,10 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    
+    # The encoder section is to precise to use bcrypt encoder for User's entity
+    encoders:
+        App\Entity\User: bcrypt
+
     providers:
         in_memory: { memory: null }
     firewalls:
