[Improve] adding more configs in the security.yaml to check the jwt authentication

--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -17,8 +17,25 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            anonymous: lazy
+        api:
+            pattern: ^/api
+            stateless: true
+            anonymous: true
+            # anonymous: lazy
+
+            json_login:
+                # Authentication (token generation )
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+            # will check users when they'll send their token
+            guard:
+                authenticators: 
+                    - lexik_jwt_authentication.jwt_token_authenticator 
+
+        # main:
+        #     anonymous: lazy
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -29,5 +46,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/api/login,  roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api,        roles: IS_AUTHENTICATED_FULLY }
+
+        # Default config
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
