[Feature] allow the current user to see his own full profil page

--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -28,3 +28,9 @@ services:
     App\Serializer\UserContextBuilder:
         decorates: 'api_platform.serializer.context_builder'
         arguments: ['@App\Serializer\UserContextBuilder.inner']
+    
+    App\Serializer\UserAttributeNormalizer:
+        arguments: ['@security.token_storage']
+        tags:
+            # The bigger priority, the first it will be called on the entity
+            - { name: 'serializer.normalizer', priority: 64 }
