--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -25,6 +25,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Need to get more infos about those lines
     App\Serializer\UserContextBuilder:
         decorates: 'api_platform.serializer.context_builder'
         arguments: ['@App\Serializer\UserContextBuilder.inner']
