[Feature] generate and send mail when a user register

--- a/src/.env
+++ b/src/.env
@@ -40,3 +40,11 @@ JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 # The passphrase needs to be declared as plain text
 JWT_PASSPHRASE=toto
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+# If the username, password, or host contains symbols, you need to encode/decode it to ensure it works
+MAILER_URL=gmail://alex.mjd123@gmail.com:qwerty23POI@smtp.gmail.com:465
+###< symfony/swiftmailer-bundle ###
