--- a/src/composer.json
+++ b/src/composer.json
@@ -15,7 +15,9 @@
         "symfony/framework-bundle": "5.0.*",
         "symfony/orm-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
-        "symfony/yaml": "5.0.*"
+        "symfony/swiftmailer-bundle": "^3.4",
+        "symfony/yaml": "5.0.*",
+        "vich/uploader-bundle": "^1.12"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
