[Feature] Throw a custom exception when trying to register a user with null Json

--- a/src/config/packages/api_platform.yaml
+++ b/src/config/packages/api_platform.yaml
@@ -35,3 +35,7 @@ api_platform:
             # enabling client to choose the partial pagination
             client_partial: true
             partial_parameter_name: 'partial'
+
+    # Set status code for custom exception
+    exception_to_status:
+        App\Exception\EmptyBodyException: 400
