--- a/src/config/packages/dev/monolog.yaml
+++ b/src/config/packages/dev/monolog.yaml
@@ -1,12 +1,20 @@
 monolog:
     handlers:
+        # Register custom logs into their own custom files
+        token_confirmation:
+            type: stream
+            level: debug
+            path: "%kernel.logs_dir%/token_confirmation_%kernel.environment%.log"
+
+            # exclusively take token_confirmation channels
+            channel: [token_confirmation]
         main:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug # debug | info | notice | warning | error | critical | alert | emergency
 
-            # Store everything except the event channel
-            channels: ["!event"]
+            # Store everything except the event channel, and the token_confirmation channel
+            channels: ["!event", "!token_confirmation"]
         # uncomment to get logging in your browser
         # you may have to allow bigger header sizes in your Web server configuration
         #firephp:
